--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ html{
 header{
     background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(../image/hero.jpg);
     height: 100vh;
-    width: 100%;
+    /* width: 100%; */
     background-size: cover;
     background-position: center;
 }
@@ -144,7 +144,7 @@ section{
 .box{
     padding: 1%;
 }
-.box ion-icon{
+.box .ion{
     font-size: 400%;
     margin-bottom: 15px;
     color: #e67e22;
@@ -211,4 +211,37 @@ section{
     font-size: 130%;
     float: left;
     margin-right: 30px;
+}
+.test img{
+    /* border: 2px solid #000; */
+    width: 100%;
+    margin-bottom: 15px;
+}
+.s3{
+    background-color: rgb(247, 243, 243);
+}
+.city-features{
+    margin-bottom: 6px;
+}
+.city-features ion-icon{
+    color: #e67e22;
+    margin-right: 10px;
+    display: inline-block;
+    width: 30px;
+    text-align: center;
+    font-size: 120%;
+    /* line-height: 200%; */
+    vertical-align: middle;
+    margin-top: -4px;
+}
+.test a:link , .test a:visited{
+    color: #e67e22;
+    text-decoration: none;
+    padding-bottom: 2px;
+    border-bottom: 1px solid #e67e22;
+    transition: border-bottom 1s , color 1s;
+}
+.test a:hover , .test a:active{
+    color: #555;
+    border-bottom: 1px solid transparent;
 }
