--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ header{
     height: 100vh;
     /* width: 100%; */
     background-size: cover;
+    background-attachment: fixed;
     background-position: center;
 }
 h1,h2,h3{
@@ -244,4 +245,39 @@ section{
 .test a:hover , .test a:active{
     color: #555;
     border-bottom: 1px solid transparent;
+}
+
+.section-testimonial{
+    background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(../image/back-customers.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center;
+    color: white;
+    background-attachment: fixed;
+}
+blockquote{
+    padding: 2%;
+    font-style: italic;
+    position: relative;
+    line-height: 145%;
+    margin-top: 10px;
+}
+cite{
+    font-size: 90%;
+    display: block;
+    margin-top: 25px;
+}
+cite img{
+    width: 40px;
+    border-radius: 50px;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+blockquote::before{
+    content: '\201C';
+    font-size: 500%;
+    display: block;
+    position: absolute;
+    top: -4%;
+    left: -4%;
 }
