--- a/css/style.css
+++ b/css/style.css
@@ -281,3 +281,60 @@ blockquote::before{
     top: -4%;
     left: -4%;
 }
+.section-plans{
+    background-color: rgb(247, 243, 243);
+}
+.aa{
+    background-color: #fff;
+    border-radius: 5px;
+    width: 90%;
+    margin-left: 5%;
+    box-shadow: 2px 2px 20px 3px #d3d0d0;
+}
+.aa div{
+    padding: 15px;
+    border-bottom: 1px solid #e8e8e8;
+}
+.plan-price{
+    font-size: 300%;
+    font-weight: 100;
+    margin-bottom: 10px;
+    color:#e67e22;
+}
+.plan-price-meal{
+    font-size: 80%;
+}
+.plan-price span{
+    font-size: 30%;
+    font-weight: 300;
+}
+.aa ul{
+    list-style: none;
+}
+.aa ul li{
+    padding: 5px 0;
+}
+.aa ion-icon{
+    color: #e67e22;
+    margin-right: 10px;
+    display: inline-block;
+    width: 30px;
+    text-align: center;
+    font-size: 120%;
+    /* line-height: 200%; */
+    vertical-align: middle;
+    margin-top: -4px;
+}
+.se{
+    text-align: center;
+    border-bottom: none;
+}
+.aa a{
+    display: block;
+    text-align: center;
+}
+.first{
+    background-color: #fcfcfc;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
