--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ html{
     font-family: 'Lato';
     font-weight: 400;
     font-size: 20px;
+    overflow-x: hidden;
 }
 .clearfix{
   zoom: 1;
@@ -188,8 +189,6 @@ section{
     padding: 0;
 }
 
-
-
 .iphone{
     width: 40%;
     float: right;
@@ -360,4 +359,56 @@ input[type=checkbox]{
 }
 *:focus{
     outline: none;
+}
+footer{
+    background-color: #333;
+    padding: 30px;
+    font-size: 100%;
+}
+.footers a , .social-icon a{
+    color: #e67e22;
+}
+.footers , .social-icon {
+    list-style: none;
+}
+.footers{
+  float: left;
+}
+.social-icon{
+    float: right;
+}
+.footers li, .social-icon li{
+    display: inline-block;
+    margin-right: 20px;
+}
+.social-icon li:last-child{
+    margin-right: 0;
+}
+.footers a:link,
+.footers a:visited,
+.social-icon a:link ,
+.social-icon a:visited{
+    text-decoration: none;
+    color: #555;
+    transition: color 1s;
+}
+.footers a:hover,
+.footers a:active
+{
+  color: #fff;
+}
+.logo-facebook:hover , .logo-twitter:hover , .logo-instagram:hover , .logo-github:hover{
+    transition: color 1s;
+}
+.logo-facebook:hover{
+   color: #3b5998;
+}
+.logo-twitter:hover{
+   color: #55acee;
+}
+.logo-instagram:hover{
+   color: #e95950;
+}
+.logo-github:hover{
+   color: #000000;
 }
