--- a/css/responsive.css
+++ b/css/responsive.css
@@ -94,4 +94,16 @@
        float: none;
        padding-right: 0;
    }
+   h1{
+       font-size: 180%;
+   }
+   .work-step{
+    margin-bottom: 20px;
+   }
+   .work-step div{
+       width: 40px;
+       height: 40px;
+       padding-top: 5px;
+       margin-right: 17px;
+   }
 }
