--- a/css/responsive.css
+++ b/css/responsive.css
@@ -123,7 +123,13 @@
    .lists{
        margin-top: 40px;
    }
+   .box p{
+       width: 70%;
+       display: inline-block;
+   }
    .box{
+       width: 100%;
        text-align: center;
    }
+  
 }
